non working npm